// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tailCmd can watch tail output 1`] = `
[
  "      time  field        state           dur  hid  
10:07:00[90m+0[39m  [48;2;165;49;8m[38;2;255;255;255mrun[39m[49m          [48;2;165;49;8m[38;2;255;255;255m [39m[49mend                 869r3
10:07:00[90m+0[39m  [48;2;126;132;148m[38;2;0;0;0mstretch[39m[49m       [48;2;126;132;148m[38;2;0;0;0mstart[39m[49m[48;2;126;132;148m[38;2;0;0;0m [39m[49m              gs6pb
10:15:00[90m+0[39m  [48;2;233;0;228m[38;2;255;255;255menvironment[39m[49m  [48;2;195;1;99m[38;2;255;255;255m [39m[49m[48;2;16;106;108m[38;2;255;255;255mhome[39m[49m[48;2;16;106;108m[38;2;255;255;255m [39m[49m               92g32
10:15:00[90m+0[39m  [48;2;126;132;148m[38;2;0;0;0mstretch[39m[49m      [48;2;126;132;148m[38;2;0;0;0m [39m[49mend                 chq8f
10:18:00[90m+0[39m  [48;2;148;83;231m[38;2;255;255;255mpushup[39m[49m       [48;2;136;136;136m[38;2;102;102;102m[38;2;148;83;231m●[39m[39m[49m                    getek
10:30:00[90m+0[39m  [48;2;233;0;228m[38;2;255;255;255menvironment[39m[49m  [48;2;16;106;108m[38;2;255;255;255m [39m[49m[48;2;195;1;99m[38;2;255;255;255moutside[39m[49m[48;2;16;106;108m[38;2;255;255;255m [39m[49m       5m   2abgf
11:00:00[90m+0[39m  [48;2;231;36;248m[38;2;255;255;255mcaffeine[39m[49m     [48;2;136;136;136m[38;2;102;102;102m[38;2;231;36;248m●[39m[39m[49m                    cav6f
11:00:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m       [48;2;175;103;202m[38;2;0;0;0memails[39m[49m[48;2;44;177;173m[38;2;0;0;0m,tasks[39m[49m[48;2;175;103;202m[38;2;44;177;173m▞[39m[49m       yafyz
11:30:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m      [48;2;175;103;202m[38;2;44;177;173m▞[39m[49m[48;2;212;135;136m[38;2;0;0;0mmeeting[39m[49m[48;2;175;103;202m[38;2;44;177;173m [39m[49m       10m  989x0
11:45:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m      [48;2;175;103;202m[38;2;44;177;173m▞[39m[49mend                 q9nko
",
]
`;

exports[`tailCmd can watch tail output 2`] = `
[
  [
    "      time  field        state           dur  hid  
10:07:00[90m+0[39m  [48;2;126;132;148m[38;2;0;0;0mstretch[39m[49m       [48;2;126;132;148m[38;2;0;0;0mstart[39m[49m[48;2;126;132;148m[38;2;0;0;0m [39m[49m              gs6pb
10:15:00[90m+0[39m  [48;2;233;0;228m[38;2;255;255;255menvironment[39m[49m  [48;2;195;1;99m[38;2;255;255;255m [39m[49m[48;2;16;106;108m[38;2;255;255;255mhome[39m[49m[48;2;16;106;108m[38;2;255;255;255m [39m[49m               92g32
10:15:00[90m+0[39m  [48;2;126;132;148m[38;2;0;0;0mstretch[39m[49m      [48;2;126;132;148m[38;2;0;0;0m [39m[49mend                 chq8f
10:18:00[90m+0[39m  [48;2;148;83;231m[38;2;255;255;255mpushup[39m[49m       [48;2;136;136;136m[38;2;102;102;102m[38;2;148;83;231m●[39m[39m[49m                    getek
10:30:00[90m+0[39m  [48;2;233;0;228m[38;2;255;255;255menvironment[39m[49m  [48;2;16;106;108m[38;2;255;255;255m [39m[49m[48;2;195;1;99m[38;2;255;255;255moutside[39m[49m[48;2;16;106;108m[38;2;255;255;255m [39m[49m       5m   2abgf
11:00:00[90m+0[39m  [48;2;231;36;248m[38;2;255;255;255mcaffeine[39m[49m     [48;2;136;136;136m[38;2;102;102;102m[38;2;231;36;248m●[39m[39m[49m                    cav6f
11:00:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m       [48;2;175;103;202m[38;2;0;0;0memails[39m[49m[48;2;44;177;173m[38;2;0;0;0m,tasks[39m[49m[48;2;175;103;202m[38;2;44;177;173m▞[39m[49m       yafyz
11:30:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m      [48;2;175;103;202m[38;2;44;177;173m▞[39m[49m[48;2;212;135;136m[38;2;0;0;0mmeeting[39m[49m[48;2;175;103;202m[38;2;44;177;173m [39m[49m       10m  989x0
11:45:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m      [48;2;175;103;202m[38;2;44;177;173m▞[39m[49mend                 q9nko
12:00:00[90m+0[39m  [48;2;148;83;231m[38;2;255;255;255mpushup[39m[49m       [38;2;148;83;231m[38;2;148;83;231m●[39m[39m                    racga
",
  ],
  [
    "      time  field        state           dur  hid  
10:15:00[90m+0[39m  [48;2;233;0;228m[38;2;255;255;255menvironment[39m[49m  [48;2;195;1;99m[38;2;255;255;255m [39m[49m[48;2;16;106;108m[38;2;255;255;255mhome[39m[49m[48;2;16;106;108m[38;2;255;255;255m [39m[49m               92g32
10:15:00[90m+0[39m  [48;2;126;132;148m[38;2;0;0;0mstretch[39m[49m      [48;2;126;132;148m[38;2;0;0;0m [39m[49mend                 chq8f
10:18:00[90m+0[39m  [48;2;148;83;231m[38;2;255;255;255mpushup[39m[49m       [48;2;136;136;136m[38;2;102;102;102m[38;2;148;83;231m●[39m[39m[49m                    getek
10:30:00[90m+0[39m  [48;2;233;0;228m[38;2;255;255;255menvironment[39m[49m  [48;2;16;106;108m[38;2;255;255;255m [39m[49m[48;2;195;1;99m[38;2;255;255;255moutside[39m[49m[48;2;16;106;108m[38;2;255;255;255m [39m[49m       5m   2abgf
11:00:00[90m+0[39m  [48;2;231;36;248m[38;2;255;255;255mcaffeine[39m[49m     [48;2;136;136;136m[38;2;102;102;102m[38;2;231;36;248m●[39m[39m[49m                    cav6f
11:00:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m       [48;2;175;103;202m[38;2;0;0;0memails[39m[49m[48;2;44;177;173m[38;2;0;0;0m,tasks[39m[49m[48;2;175;103;202m[38;2;44;177;173m▞[39m[49m       yafyz
11:30:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m      [48;2;175;103;202m[38;2;44;177;173m▞[39m[49m[48;2;212;135;136m[38;2;0;0;0mmeeting[39m[49m[48;2;175;103;202m[38;2;44;177;173m [39m[49m       10m  989x0
11:45:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m      [48;2;175;103;202m[38;2;44;177;173m▞[39m[49mend                 q9nko
12:00:00[90m+0[39m  [48;2;148;83;231m[38;2;255;255;255mpushup[39m[49m       [38;2;148;83;231m[38;2;148;83;231m●[39m[39m                    racga
12:30:00[90m+0[39m  [48;2;231;36;248m[38;2;255;255;255mcaffeine[39m[49m     [38;2;231;36;248m[38;2;231;36;248m●[39m[39m                    wwtyu
",
  ],
]
`;

exports[`tailCmd displays by default the last 10 occurrences in the database 3`] = `
[
  [
    "      time  field        state           dur  hid  
10:07:00[90m+0[39m  [48;2;165;49;8m[38;2;255;255;255mrun[39m[49m          [48;2;165;49;8m[38;2;255;255;255m [39m[49mend                 869r3
10:07:00[90m+0[39m  [48;2;126;132;148m[38;2;0;0;0mstretch[39m[49m       [48;2;126;132;148m[38;2;0;0;0mstart[39m[49m[48;2;126;132;148m[38;2;0;0;0m [39m[49m              gs6pb
10:15:00[90m+0[39m  [48;2;233;0;228m[38;2;255;255;255menvironment[39m[49m  [48;2;195;1;99m[38;2;255;255;255m [39m[49m[48;2;16;106;108m[38;2;255;255;255mhome[39m[49m[48;2;16;106;108m[38;2;255;255;255m [39m[49m               92g32
10:15:00[90m+0[39m  [48;2;126;132;148m[38;2;0;0;0mstretch[39m[49m      [48;2;126;132;148m[38;2;0;0;0m [39m[49mend                 chq8f
10:18:00[90m+0[39m  [48;2;148;83;231m[38;2;255;255;255mpushup[39m[49m       [48;2;136;136;136m[38;2;102;102;102m[38;2;148;83;231m●[39m[39m[49m                    getek
10:30:00[90m+0[39m  [48;2;233;0;228m[38;2;255;255;255menvironment[39m[49m  [48;2;16;106;108m[38;2;255;255;255m [39m[49m[48;2;195;1;99m[38;2;255;255;255moutside[39m[49m[48;2;16;106;108m[38;2;255;255;255m [39m[49m       5m   2abgf
11:00:00[90m+0[39m  [48;2;231;36;248m[38;2;255;255;255mcaffeine[39m[49m     [48;2;136;136;136m[38;2;102;102;102m[38;2;231;36;248m●[39m[39m[49m                    cav6f
11:00:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m       [48;2;175;103;202m[38;2;0;0;0memails[39m[49m[48;2;44;177;173m[38;2;0;0;0m,tasks[39m[49m[48;2;175;103;202m[38;2;44;177;173m▞[39m[49m       yafyz
11:30:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m      [48;2;175;103;202m[38;2;44;177;173m▞[39m[49m[48;2;212;135;136m[38;2;0;0;0mmeeting[39m[49m[48;2;175;103;202m[38;2;44;177;173m [39m[49m       10m  989x0
11:45:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m      [48;2;175;103;202m[38;2;44;177;173m▞[39m[49mend                 q9nko
",
  ],
]
`;

exports[`tailCmd tail metrics can display modifyTime tail 1`] = `
[
  [
    "       time  field      state      hid  
[90mm[39m19:00:00[90m+0[39m  [48;2;186;191;136m[38;2;0;0;0malcohol[39m[49m    [48;2;136;136;136m[38;2;102;102;102m[38;2;186;191;136m●[39m[39m[49m          elfuv
[90mm[39m21:00:00[90m+0[39m  [48;2;111;238;105m[38;2;0;0;0msocialize[39m[49m  [48;2;136;136;136m[38;2;102;102;102m∅[39m[49mend       d7j7m
[90mm[39m21:01:00[90m+0[39m  [48;2;111;238;105m[38;2;0;0;0msocialize[39m[49m  [48;2;136;136;136m[38;2;102;102;102m∅[39m[49m[48;2;111;238;105m[38;2;0;0;0mstart[39m[49m[48;2;111;238;105m[38;2;0;0;0m [39m[49m    w1fla
[90mm[39m22:00:00[90m+0[39m  [48;2;139;10;68m[38;2;255;255;255mperson[39m[49m     [38;2;139;10;68m¢[39m          en61v
",
  ],
]
`;

exports[`tailCmd tail metrics can just display occurTime tail 1`] = `
[
  [
    "      time  field      state      hid  
19:00:00[90m+0[39m  [48;2;186;191;136m[38;2;0;0;0malcohol[39m[49m    [48;2;136;136;136m[38;2;102;102;102m[38;2;186;191;136m●[39m[39m[49m          elfuv
19:30:00[90m+0[39m  [48;2;111;238;105m[38;2;0;0;0msocialize[39m[49m  [48;2;136;136;136m[38;2;102;102;102m∅[39m[49m[48;2;111;238;105m[38;2;0;0;0mstart[39m[49m[48;2;111;238;105m[38;2;0;0;0m [39m[49m    w1fla
21:00:00[90m+0[39m  [48;2;111;238;105m[38;2;0;0;0msocialize[39m[49m  [48;2;136;136;136m[38;2;102;102;102m∅[39m[49mend       d7j7m
",
  ],
]
`;

exports[`tailCmd tail metrics defaults to a hybrid display of occurTime and createTime 1`] = `
[
  [
    "       time  field      state      hid  
 19:00:00[90m+0[39m  [48;2;186;191;136m[38;2;0;0;0malcohol[39m[49m    [48;2;136;136;136m[38;2;102;102;102m[38;2;186;191;136m●[39m[39m[49m          elfuv
 19:30:00[90m+0[39m  [48;2;111;238;105m[38;2;0;0;0msocialize[39m[49m  [48;2;136;136;136m[38;2;102;102;102m∅[39m[49m[48;2;111;238;105m[38;2;0;0;0mstart[39m[49m[48;2;111;238;105m[38;2;0;0;0m [39m[49m    w1fla
[90mc[39m20:00:00[90m+0[39m  [48;2;139;10;68m[38;2;255;255;255mperson[39m[49m     [38;2;139;10;68m¢[39m          en61v
 21:00:00[90m+0[39m  [48;2;111;238;105m[38;2;0;0;0msocialize[39m[49m  [48;2;136;136;136m[38;2;102;102;102m∅[39m[49mend       d7j7m
",
  ],
]
`;

exports[`tailCmd will display all if there are less than 10 occurrences in db 1`] = `
[
  [
    "      time  field     state          hid  
08:00:00[90m+0[39m  [48;2;231;36;248m[38;2;255;255;255mcaffeine[39m[49m  [48;2;136;136;136m[38;2;102;102;102m[38;2;231;36;248m●[39m[39m[49m              elfuv
10:00:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m   [48;2;136;136;136m[38;2;102;102;102m∅[39m[49m[48;2;242;221;108m[38;2;0;0;0mhousehold[39m[49m[48;2;242;221;108m[38;2;0;0;0m [39m[49m    en61v
10:30:00[90m+0[39m  [48;2;70;248;111m[38;2;0;0;0mproject[39m[49m   [48;2;242;221;108m[38;2;0;0;0m [39m[49mend           d7j7m
",
  ],
]
`;
